--- a/src/pages/user/style/main.css
+++ b/src/pages/user/style/main.css
@@ -21,12 +21,23 @@ a {
 }
 
 
+.content-box {
+    position: absolute;
+    left: 250px;
+    right: 0;
+    top: 70px;
+    bottom: 0;
+    padding-bottom: 30px;
+    -webkit-transition: left .3s ease-in-out;
+    transition: left .3s ease-in-out;
+    background: #f0f0f0;
+}
+
 .content {
     width: auto;
-    margin-top: 10px;
-    margin-left: 280px;
-    margin-right: 20px;
-    height: 640px;
+    height: 100%;
+    padding: 10px;
+    overflow-y: scroll;
     box-sizing: border-box;
 }
 
@@ -36,11 +47,9 @@ a {
 
 .container {
     padding: 30px;
-    overflow-y: scroll;
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
-    height: 85%;
 }
 
 .crumbs {
